gh-104 - Stop using a fixed height
This means validation doesn't get squashed.

--- a/stroom-auth-ui/src/styles/form.css
+++ b/stroom-auth-ui/src/styles/form.css
@@ -38,7 +38,6 @@
   display: flex;
   flex-direction: column;
   width: 50%;
-  height: 70px;
 }
 
 .field-container label {
